--- a/awse/templates/awse/base.html
+++ b/awse/templates/awse/base.html
@@ -28,9 +28,9 @@
     <br/><br/>
 
     <div class="row" id="row-box-1">
-            {% block content %}
-            {% endblock %}
+            {% block content %}{% endblock %}
             <br/>
+
         <div class="footer-aware" style="margin: auto;"></div>
     </div>
 
