--- a/awse/templates/awse/load_blocks/calculator.html
+++ b/awse/templates/awse/load_blocks/calculator.html
@@ -4,7 +4,7 @@
         <div style="float: left;">
             <label class="city">
                 <i>
-                    {{ c_input }}&nbsp;=&nbsp;<b style="text-decoration: underline;">{{ c_result }}</b>
+                    {{ vars.c_input }}&nbsp;=&nbsp;<b style="text-decoration: underline;">{{ vars.c_result }}</b>
                 </i>
             </label>
             <br/>
