--- a/awse/templates/awse/load_blocks/translate.html
+++ b/awse/templates/awse/load_blocks/translate.html
@@ -4,11 +4,11 @@
         <div style="float: left;">
             <label class="city">
                 <i>
-                    {{ search }}
+                    {{ vars.search }}
                 </i>
                 <br/><br/>
                 <b>
-                    {{ translate_result }}
+                    {{ vars.translate_result }}
                 </b>
             </label>
             <br/>
