--- a/awse/templates/awse/load_blocks/news.html
+++ b/awse/templates/awse/load_blocks/news.html
@@ -6,7 +6,7 @@
             <label class="city">
                 {# paste news image or text if this is a mobile device #}
                 {% if mobile == '1' %}
-                    <img src="{% url 'image_generate_api' %}?text={{ el.0.1 }}&author={{ el.0.2 }}&sign={{ user_address_original|sign_address_encrypt }}&token={{ token_image_proxy }}"
+                    <img src="{% url 'image_generate_api' %}?text={{ el.0.1 }}&author={{ el.0.2 }}&sign={{ vars.user_address_original|sign_address_encrypt }}&token={{ vars.token_image_proxy }}"
                              class="photohub_item" onerror="imgError(this);" style="width:100%;margin-top: 3%;" alt="News block cover">
                 {% else %}
                     <br/>
