--- a/awse/templates/awse/load_blocks/result.html
+++ b/awse/templates/awse/load_blocks/result.html
@@ -1,4 +1,7 @@
 {% spaceless %}
+<!-- {{ vars }} -->
+<!-- {{ vars.token_image_proxy }} -->
+<!-- {{ vars.user_address_original }} -->
 <div class="col-12 col-lg-12 padding-block-center-box">
     <div class="user box aos-init aos-animate" data-aos="fade-up">
         <div style="float: left;">
