--- a/awse/templates/awse/home/additional/base.html
+++ b/awse/templates/awse/home/additional/base.html
@@ -2,7 +2,7 @@
 <div class="col-12 col-lg-12 padding-block-center-box">
 <div class="user box aos-init aos-animate" data-aos="fade-up">
 <div style="float: left;">
-{% if select_news_or_quote and quote %}
+{% if vars.select_news_or_quote and vars.quote %}
     {% include './quotes.html' %}
 {% else %}
     {% include './news.html' %}
