--- a/awse/templates/awse/home/additional/base.html
+++ b/awse/templates/awse/home/additional/base.html
@@ -4,8 +4,9 @@
 <div style="float: left;">
 {% if select_news_or_quote and quote %}
     {% include './quotes.html' %}
-{% else %}
-    {% include './news.html' %}
 {% endif %}
+{# {% else %} #}
+    {# {% include './news.html' %} #}
+{# {% endif %} #}
 </div></div></div>
 {% endspaceless %}
