--- a/awse/templates/awse/index.html
+++ b/awse/templates/awse/index.html
@@ -15,7 +15,10 @@ AWARE - Search
         {% include 'awse/home/advertise/bottom_ad_block.html' %}
 
         <div class="row-posts-end" style="visibility: hidden;transition: margin-top 1s;margin-top: 1em;">
-            {% include 'awse/home/additional/base.html' %}
+            {# Only quotes #}
+            {% if select_news_or_quote and quote %}
+                {% include 'awse/home/additional/base.html' %}
+            {% endif %}
         </div>
 
         {% include 'awse/home/search_els.html' %}
