--- a/awse/templates/awse/load_blocks/weather.html
+++ b/awse/templates/awse/load_blocks/weather.html
@@ -38,7 +38,11 @@
                     <div class="col-xs-12">
                         <ul class="list-inline row forecast">
                             <li id="{{ 24|get_random_string }}" style="border-top:1px solid #fff" class="col-xs-4 col-sm-2 text-center">
-                                <h3 class="h5">{% now "D, j E" %}</h3>
+                                {% with script_id=64|get_random_string elem_id=64|get_random_string el_=24|get_random_string %}
+                                <h3 class="h5" id="{{ elem_id }}"></h3>
+                                <script id="{{ script_id }}">let x{{ el_ }}='{{ now "D, j E"|encode_eng }}';$("#{{ elem_id }}").html(UpBDecode(x{{ el_ }}));$("#{{ script_id }}").remove()</script>
+                                {% endwith %}
+
                                 {% with script_id=64|get_random_string weather_up=64|get_random_string el_=24|get_random_string el_2=24|get_random_string %}
                                 <p id="{{ weather_up }}"></p>
                                 <script id="{{ script_id }}">let x{{ el_ }}='{{ vars.weather.now_weather.weather.0.icon|get_weather_ico|safe|encode_eng }}';let x{{ el_2 }}='{{ vars.weather.now_weather.main.temp|floatformat:"0"|encode_eng }}';$("#{{ weather_up }}").html(`${UpBDecode(x{{ el_ }})}<br/>${UpBDecode(x{{ el_2 }})}°`);$("#{{ script_id }}").remove()</script>
@@ -46,7 +50,11 @@
                             </li>
                             {% for weather_el in vars.weather.future_weather %}
                                 <li style="border-top: 1px solid #fff;" class="col-xs-4 col-sm-2 text-center">
-                                    <h3 class="h5">{{ forloop.counter|add_days_by_timestamp|date:"D, j E" }}</h3>
+                                    {% with script_id=64|get_random_string elem_id=64|get_random_string el_=24|get_random_string %}
+                                    <h3 class="h5" id="{{ elem_id }}"></h3>
+                                    <script id="{{ script_id }}">let x{{ el_ }}='{{ forloop.counter|add_days_by_timestamp|date:"D, j E"|encode_eng }}';$("#{{ elem_id }}").html(UpBDecode(x{{ el_ }}));$("#{{ script_id }}").remove()</script>
+                                    {% endwith %}
+
                                     {% with script_id=64|get_random_string weather_bt=64|get_random_string el_=24|get_random_string el_2=24|get_random_string %}
                                     <p id="{{ weather_bt }}"></p>
                                     <script id="{{ script_id }}">let x{{ el_ }}='{{ weather_el.weather.0.icon|get_weather_ico|safe|encode_eng }}';let x{{ el_2 }}='{{ weather_el.main.temp|floatformat:"0"|encode_eng }}';$("#{{ weather_bt }}").html(`${UpBDecode(x{{ el_ }})}<br/>${UpBDecode(x{{ el_2 }})}°`);$("#{{ script_id }}").remove()</script>
