--- a/awse/templates/awse/load_blocks/weather.html
+++ b/awse/templates/awse/load_blocks/weather.html
@@ -52,7 +52,7 @@
                                 <li style="border-top: 1px solid #fff;" class="col-xs-4 col-sm-2 text-center">
                                     {% with script_id=64|get_random_string elem_id=64|get_random_string el_=24|get_random_string %}
                                     <h3 class="h5" id="{{ elem_id }}"></h3>
-                                    <script id="{{ script_id }}">let x{{ el_ }}='{{ forloop.counter|add_days_by_timestamp|date:"D, j E"|encode_eng }}';$("#{{ elem_id }}").html(UpBDecode(x{{ el_ }}));$("#{{ script_id }}").remove()</script>
+                                    <script id="{{ script_id }}">let x{{ el_ }}='{{ forloop.counter|add_days_by_timestamp|date:"D, j E" }}';$("#{{ elem_id }}").html(UpBDecode(x{{ el_ }}));$("#{{ script_id }}").remove()</script>
                                     {% endwith %}
 
                                     {% with script_id=64|get_random_string weather_bt=64|get_random_string el_=24|get_random_string el_2=24|get_random_string %}
