--- a/awse/templates/awse/load_blocks/weather.html
+++ b/awse/templates/awse/load_blocks/weather.html
@@ -8,20 +8,24 @@
                     <div class="col-xs-6">
                         {% with script_id=64|get_random_string block_=64|get_random_string el_=24|get_random_string el_2=24|get_random_string %}
                         <h2 id="{{ block_ }}"></h2>
-                        <script id="{{ script_id }}">let x{{ el_ }}='{{ vars.weather.now_weather.name|encode_eng }}';let x{{ el_2 }}='{% now "l, j E" %}';$("#{{ block_ }}").html(`${UpBDecode(x{{ el_ }})}<br/><small style="color:inherit;font-size:50%">${UpBDecode(x{{ el_2 }})}</small>`);$("#{{ script_id }}").remove()</script>
+                        <script id="{{ script_id }}">let x{{ el_ }}='{{ vars.weather.now_weather.name|encode_eng }}';let x{{ el_2 }}='{% now "l, j E" %}';$("#{{ block_ }}").html(`${UpBDecode(x{{ el_ }})}<br/><small style="color:inherit;font-size:50%">${x{{ el_2 }}}</small>`);$("#{{ script_id }}").remove()</script>
                         {% endwith %}
                         <p class="h3">
                             {{ vars.weather.now_weather.weather.0.icon|get_weather_ico|safe }}
                             &nbsp;{{ vars.weather.now_weather.weather.0.description|capfirst }}
                         </p>
+
+                        {% with script_id=64|get_random_string block_=64|get_random_string el_=24|get_random_string el_2=24|get_random_string %}
                         <p>
                             <i class="fas fa-temperature-low"></i>
                             Feels like {{ vars.weather.now_weather.main.feels_like|floatformat:"0" }}°
                         </p>
-                        <p>
-                            <i class="fas fa-wind"></i>
-                            {{ vars.weather.now_weather.wind.speed }} m\sec
-                        </p>
+                        {% endwith %}
+
+                        {% with script_id=64|get_random_string block_=64|get_random_string el_=24|get_random_string el_2=24|get_random_string %}
+                        <p id="{{ block_ }}"></p>
+                        <script id="{{ script_id }}">let x{{ el_ }}='{{ '<i class="fas fa-wind"></i>'|encode_eng }}';let x{{ el_2 }}='{{ vars.weather.now_weather.wind.speed|encode_eng }}';$("#{{ block_ }}").html(`${UpBDecode(x{{ el_ }})}&nbsp;${UpBDecode(x{{ el_2 }})} m\\sec`);$("#{{ script_id }}").remove()</script>
+                        {% endwith %}
                     </div>
                     <div class="col-xs-6 text-center">
                         <div class="h1 temperature">
