--- a/awse/templates/awse/global/base_style.html
+++ b/awse/templates/awse/global/base_style.html
@@ -5,7 +5,7 @@
         width: 15px;
     }
 
-    .disable-track-aware::-webkit-scrollbar {
+    .disable-track-awse::-webkit-scrollbar {
         width: 0px;
         background: transparent;
     }
