--- a/awse/templates/awse/global/head_links.html
+++ b/awse/templates/awse/global/head_links.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 {% spaceless %}
-<link rel="search" type="application/opensearchdescription+xml" title="AWARE" href="/opensearch.xml">
+<link rel="search" type="application/opensearchdescription+xml" title="AWSE" href="/opensearch.xml">
 
 <link rel="stylesheet" href="{% static 'awse/bootstrap/css/bootstrap.min.css' %}" crossorigin="anonymous"/>
 <link rel="stylesheet" href="{% static 'awse/fontawesome/css/all.min.css' %}" crossorigin="anonymous"/>
