--- a/awse/templates/awse/global/head_meta.html
+++ b/awse/templates/awse/global/head_meta.html
@@ -5,7 +5,7 @@
 <meta name="og:description"
       content="{% if search_q %}{{ search_q }}{% else %}Convenient and beautiful search engine{% endif %}">
 <meta name="og:url" content="https://www.awse.us{% block url_path %}{% endblock %}">
-<meta name="og:site_name" content="AWARE">
+<meta name="og:site_name" content="AWSE">
 <meta name="og:locale" content="en_US">
 <meta name="theme-color" content="#0e0e10">
 <meta name="og:type" content="website">
