--- a/awse/templates/awse/global/header.html
+++ b/awse/templates/awse/global/header.html
@@ -6,7 +6,7 @@
 
     <div class="header_content">
         <a href="{% url 'index_page' %}">
-            <label class="header_title select_disable_text" style="font-family:'Pacifico',cursive;user-select:none">AWARE</label>
+            <label class="header_title select_disable_text" style="font-family:'Pacifico',cursive;user-select:none">AWSE</label>
         </a>
     </div>
 </div>
