--- a/awse/templates/awse/load_blocks/note.html
+++ b/awse/templates/awse/load_blocks/note.html
@@ -2,7 +2,7 @@
 <div class="col-12 col-lg-12 padding-block-center-box">
     <div class="user box aos-init aos-animate" data-aos="fade-up">
         <div style="float: left;">
-            <label class="username">AWARE bot in Telegram</label><br>
+            <label class="username">AWSE bot in Telegram</label><br>
             <label class="city">
                 Convenient search engine directly in Telegram. To go to the bot - click on its alias <a href="https://t.me/AwareSearchBot">@AwareSearchBot</a>.
             </label>
