--- a/awse/templates/awse/base.html
+++ b/awse/templates/awse/base.html
@@ -31,7 +31,7 @@
             {% block content %}{% endblock %}
             <br/>
 
-        <div class="footer-aware" style="margin: auto;"></div>
+        <div class="footer-awse" style="margin: auto;"></div>
     </div>
 
     <br/><br/><br/>
