--- a/awse/templates/awse/home/search_container.html
+++ b/awse/templates/awse/home/search_container.html
@@ -1,16 +1,16 @@
 {% spaceless %}
-<div class="search-aware-block-global" style="margin-bottom: -8em;transition: margin-bottom 0.8s;">
+<div class="search-awse-block-global" style="margin-bottom: -8em;transition: margin-bottom 0.8s;">
     <div class="wrapper">
         <div class="search-input" style="z-index: 106;">
             <a href="" target="_blank" hidden></a>
-            <input type="text" maxlength="{{ max_search_len }}" class="search-input-aware" size="100"
+            <input type="text" maxlength="{{ max_search_len }}" class="search-input-awse" size="100"
                    style="transition: padding 0.5s;" placeholder="{{ search_template }}">
-            <div class="autocom-box disable-track-aware"></div>
+            <div class="autocom-box disable-track-awse"></div>
             <div class="load-more-end-butt icon">
-                <i class="spinner-border spinner_search_load_aware" style="visibility: hidden;"></i>
-                <i class="fas fa-search icon_search_load_aware_one" style="visibility: hidden;" title="Search"></i>
+                <i class="spinner-border spinner_search_load_awse" style="visibility: hidden;"></i>
+                <i class="fas fa-search icon_search_load_awse_one" style="visibility: hidden;" title="Search"></i>
             </div>
-            <div class="clear_aware_search_string"
+            <div class="clear_awse_search_string"
                  style="visibility: hidden;transition: margin-right 0.6s;margin-right: 2.3em;top: 0.8em;position: absolute;right: 0px;text-align: center;line-height: 55px;font-size: 20px;color: #202124;cursor: pointer;">
                 <i class="fas fa-times" style="color: #000000ad;" title="Clear string"></i>
             </div>
@@ -36,11 +36,11 @@
             -khtml-user-select: none;
             transition: width 0.6s, margin-bottom 1s;
             min-width: 20%;
-        " class="aware_hide_blocks_on_index_page">
+        " class="awse_hide_blocks_on_index_page">
     <p style="
                 text-align: center;
                 color: #e2e2e2;
                 margin: 5px;
-            " class="aware_hide_blocks_on_index_page_text">Hide</p>
+            " class="awse_hide_blocks_on_index_page_text">Hide</p>
 </div>
 {% endspaceless %}
