--- a/awse/templates/awse/home/advertise/banner_head.html
+++ b/awse/templates/awse/home/advertise/banner_head.html
@@ -1,7 +1,7 @@
 {% spaceless %}
-<div class="advertise-aware-block" style="width:auto;text-align:center;padding:15px;transition:margin-top 1s">
+<div class="advertise-awse-block" style="width:auto;text-align:center;padding:15px;transition:margin-top 1s">
     <a href="">
-        <img class="banner_ad_aware" done="no" onerror="BannerError(this);"
+        <img class="banner_ad_awse" done="no" onerror="BannerError(this);"
              style="transition: width 1s;width: 95%;display: none;margin-top: 1%;max-width: 95%;min-width: 40%;height: auto;-webkit-appearance: none;border-radius: 0.5em;padding: 0;text-align: left;padding-bottom: 1px;box-shadow: 0 4px 15px 0 rgb(0 0 0 / 40%);">
     </a>
 </div>
