--- a/awse/templates/awse/global/js.html
+++ b/awse/templates/awse/global/js.html
@@ -9,7 +9,8 @@
         user_address__ = "{{ user_address|sign_address_encrypt }}", get_video_yt__ = '{% url "get_video_yt" %}',
         search_template__ = "{{ search_template }}", get_banner__ = '{% url "get_banner" %}',
         search_suggestions_get__ = '{% url "search_suggestions_get" %}', get_ad__ = '{% url "get_ad" %}',
-        footer_load__ = '{% url "footer_load" %}', token_re__ = "{{ token_re }}";
+        footer_load__ = '{% url "footer_load" %}', token_re__ = "{{ token_re }}",
+        whois_api_url = "{% url 'whois_data' %}";
 </script>
 <script defer src="{% static 'awse/js/core.min.js' %}" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 {% endspaceless %}
