--- a/awse/templates/awse/home/search_container.html
+++ b/awse/templates/awse/home/search_container.html
@@ -17,30 +17,7 @@
         </div>
     </div>
 </div>
-<div style="
-            border-color: #717171!important;
-            border: 2px;
-            border-style: solid;
-            border-radius: 5px;
-            margin: auto;
-            justify-content: center;
-            margin-bottom: 5%;
-            width: auto;
-            max-width: 35%;
-            -moz-user-select: none;
-            -webkit-user-select: none;
-            -webkit-touch-callout: none;
-            -ms-user-select: none;
-            -o-user-select: none;
-            user-select: none;
-            -khtml-user-select: none;
-            transition: width 0.6s, margin-bottom 1s;
-            min-width: 20%;
-        " class="awse_hide_blocks_on_index_page">
-    <p style="
-                text-align: center;
-                color: #e2e2e2;
-                margin: 5px;
-            " class="awse_hide_blocks_on_index_page_text">Hide</p>
+<div class="awse_hide_blocks_on_index_page hide_button_awse">
+    <p class="awse_hide_blocks_on_index_page_text hide_button_in_">Hide</p>
 </div>
 {% endspaceless %}
